--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   This website features a collection of dev setup tweaks I make to ensure my development environment is set up
   to my preferred specifications!
 domain: vanilladevelop.github.io
-baseurl:  https://vanilladevelop.github.io
-url: /ide-setup
+url: https://vanilladevelop.github.io
+baseurl: /IDE-setup
 github_username:  VanillaDevelop
 
 # Build settings
